--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -9,7 +9,7 @@
                 <div class="list-group-item list-group-item-action" style="margin-left:30px;">
             <% end %>
                 <%= task.t_name %>
-                <small><%= task.role %>係　　<%= task.start_date %> から <%= task.end_date %> まで</small>
+                <small><%= task.role %>係　　<input type="date" class="form-control" style="width:230px;display:inline;" value="<%= task.start_date %>"> から <input type="date" class="form-control" style="width:230px;display:inline;" value="<%= task.end_date %>"> まで</small>
             </div>
         <% end %>
     </div>
