--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -9,7 +9,7 @@
                 <div class="list-group-item list-group-item-action row">
                     <a href="/tasks/<%= r_task.id %>">
                     <span class="col-sm-6" style="min-width:40%;">
-                    <%= r_task.t_name %>
+                    <%= r_task.t_name %>　<%= r_task.end_date %>まで
                     </span>
                     <span class="col-sm-6">
                     <span class="btn btn-success" style="color:white;">未終了</span>
