--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -13,4 +13,6 @@
         </tr>
     </table>
     <a class="btn btn-warning">終了した</a>
+    <br>
+    <a href="/works/<%= @task.work.w_url %>" class="btn btn-danger" style="margin-top:20px;">戻る</a>
 </div>
