--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,43 +1,90 @@
-<div style="margin:20px 60px;" class="row">
-    <div class="col-sm-7">
-        <h1><%= @work.w_name %>のスケジュール</h1>
-        <hr>
-        <h4>今週終わらせること</h4>
-        <br>
-        <div class="list-group">
-            <% @recent_tasks.each do |r_task| %>
-                <div class="list-group-item list-group-item-action row">
-                    <a href="/tasks/<%= r_task.id %>">
-                    <span class="col-sm-6" style="min-width:40%;">
-                    <%= r_task.t_name %>　<%= r_task.end_date %>まで
-                    </span>
-                    <span class="col-sm-6">
-                    <span class="btn btn-success" style="color:white;">未終了</span>
-                    </span>
-                    </a>
+<div style="margin:20px 60px;">
+    <h1><%= @work.w_name %>のスケジュール</h1>
+    <hr>
+    <div class="row">
+        <div class="col-sm-7">
+            <h4><i class="fas fa-angle-double-right"></i>今週終わらせること</h4>
+            <br>
+            <div class="list-group">
+                <% @recent_tasks.each do |r_task| %>
+                    <div class="list-group-item list-group-item-action row">
+                        <a href="/tasks/<%= r_task.id %>">
+                        <span class="col-sm-6" style="min-width:40%;">
+                        <%= r_task.t_name %>　<%= r_task.end_date %>まで
+                        </span>
+                        <span class="col-sm-6">
+                        <span class="btn btn-success" style="color:white;">未終了</span>
+                        </span>
+                        </a>
+                    </div>
+                <% end %>
+            </div>
+            <br>
+            <h4><i class="fas fa-angle-double-right"></i>内容</h4>
+            <br>
+            <p>まだ情報が少ないため、表示できません。</p>
+        </div>
+        <div class="col-sm-5">
+            <h3><i class="fas fa-angle-double-right"></i><%= @work.w_name %>の進捗</h3>
+            <br>
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="5" aria-valuemin="0" aria-valuemax="100" style="width:25%;"></div>
+                <span class="ml-1">5%</span>
+            </div>
+            <br>
+            <hr>
+            <h3><i class="fas fa-angle-double-right"></i>遅れそうなスケジュール</h3>
+            <br>
+            <div class="list-group">
+                <div class="list-group-item list-group-item-action">
+                  <a href="/tasks/3">
+                　予算案
+                  </a>
                 </div>
-            <% end %>
-        </div>
-        <hr>
-        <h4>内容</h4>
-        <br>
-        <p>まだ情報が少ないため、表示できません。</p>
-    </div>
-    <div class="col-sm-5">
-        <h3><%= @work.w_name %>の進捗</h3>
-        <br>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width:25%;"></div>
-            <span class="ml-1">15%</span>
-        </div>
-        <br>
-        <hr>
-        <h3>遅れそうなスケジュール</h3>
-        <br>
-        <div class="list-group">
-            <div class="list-group-item list-group-item-action">
-            　予算案
             </div>
         </div>
     </div>
+    <br>
+    <div>
+        <h4><i class="fas fa-angle-double-right"></i>スケジュール</h4>
+        <br>
+        <table class="table">
+            <tr>
+                <td>担当者</td>
+                <td>3月</td>
+                <td>4月</td>
+                <td>5月</td>
+                <td>6月</td>
+            </tr>
+            <tr>
+                <td>幹部1</td>
+                <td><div style="width:240%;" class="alert-danger text-center">hoge1</div></td>
+                <td></td>
+                <td><div style="width:115%;" class="alert-warning text-center">hoge2</div></td>
+                <td><div style="width:115%;" class="alert-success text-center">hoge3</div></td>
+            </tr>
+            <tr>
+                <td>幹部2</td>
+                <td></td>
+                <td><div style="width:115%;" class="alert-warning text-center">hoge2</div></td>
+                <td><div style="width:115%;" class="alert-primary text-center">hoge3</div></td>
+                <td><div style="width:115%;" class="alert-success text-center">hoge3</div></td>
+            </tr>
+            <tr>
+                <td>予算</td>
+                <td><div style="width:115%;" class="alert-warning text-center">hoge2</div></td>
+                <td><div style="width:115%;" class="alert-primary text-center">hoge3</div></td>
+                <td><div style="width:115%;" class="alert-success text-center">hoge3</div></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>飲み会</td>
+                <td><div style="width:115%;" class="alert-danger text-center">hoge2</div></td>
+                <td><div style="width:115%;" class="alert-warning text-center">hoge2</div></td>
+                <td><div style="width:115%;" class="alert-primary text-center">hoge3</div></td>
+                <td><div style="width:115%;" class="alert-success text-center">hoge3</div></td>
+            </tr>
+        </table>
+    </div>
+    <br>
 </div>
