--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -13,6 +13,23 @@
         </tr>
     </table>
     <a class="btn btn-warning">終了した</a>
-    <br>
+    <br><br>
+    <% if @task.parent_task_id == 0 then %>
+        <h4>含まれる作業</h4>
+        <div class="list-group">
+            <% Task.where(:t_number => @task.t_number).each do |t_task| %>
+                <% if t_task.parent_task_id == 0 then %>
+                    <div class="list-group-item list-group-item-action active">
+                        <a href="/tasks/<%= t_task.id %>" style="color:white;"><%= t_task.t_name %></a>
+                    </div>
+                <% else %>
+                    <div class="list-group-item list-group-item-action">
+                        <a href="/tasks/<%= t_task.id %>"><%= t_task.t_name %></a>
+                    </div>     
+                <% end %>           
+            <% end %>
+        </div>
+        <br>
+    <% end %>
     <a href="/works/<%= @task.work.w_url %>" class="btn btn-danger" style="margin-top:20px;">戻る</a>
 </div>
