--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -5,13 +5,17 @@
         <% @tasks.each do |task| %>
             <% if task.parent_task_id == 0 then %>
                 <div class="list-group-item list-group-item-action active">
-                    <%= task.t_name %>
-                    <small><%= task.role %>係　　<input type="date" class="form-control" style="width:230px;display:inline;" value="<%= task.start_date %>"> から <input type="date" class="form-control" style="width:230px;display:inline;" value="<%= task.end_date %>"> まで</small>
+                    <p><%= task.t_name %></p>
+                    <small>
+                     <%= task.role %>　　<input type="date" class="form-control" style="width:180px;display:inline;" value="<%= year_month_date(@today.prev_day(task.before_date)) %>">
+                     から <input type="date" class="form-control" style="width:180px;display:inline;" value="<%= year_month_date(@today.prev_day(task.before_date).next_day(task.date_duration)) %>"> まで
+                     </small>
                 </div>
             <% else %>
                 <div class="list-group-item list-group-item-action" style="margin-left:30px;">
-                    <%= task.t_name %>
-                    <small><%= task.role %>係　　<%= task.start_date %> から <%= task.end_date %> まで</small>
+                    <p style="width:200px"><%= task.t_name %></p>
+                    <small><%= task.role %>　　<%= year_month_date(@today.prev_day(task.before_date)) %>
+                    から <%= year_month_date(@today.prev_day(task.before_date).next_day(task.date_duration)) %> まで</small>
                 </div>
             <% end %>
         <% end %>
