--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -26,9 +26,9 @@
     <div class="col-sm-6">
         <div class="top-page-input">
             <label name="start-date">合宿開始日</label>
-            <input type="date" name="start-date" class="form-control" style="width:200px;"></input>
+            <input type="date" name="start-date" class="form-control" style="width:200px;" value="2020-04-10"></input>
             <label name="end-date">合宿開始日</label>
-            <input type="date" name="end-date" class="form-control" style="width:200px;"></input>
+            <input type="date" name="end-date" class="form-control" style="width:200px;" value="2020-04-13"></input>
         </div>
     </div>
     </div>
