impl edit&add&delete at registeration page

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -8,27 +8,30 @@
     <div class="col-sm-6">
         <div class="top-page-input">
         <label name="name1">幹部1</label>
-        <input type="text" name="name1" class="form-control" style="width:200px;"></input>
+        <input type="text" name="name1" class="form-control" style="width:200px;" value="太郎"></input>
         </div>
         <div class="top-page-input">
         <label name="name2">幹部2</label>
-        <input type="text" name="name2" class="form-control" style="width:200px;"></input>
+        <input type="text" name="name2" class="form-control" style="width:200px;" value="二郎"></input>
         </div>
         <div class="top-page-input">
         <label name="name3">飲み会</label>
-        <input type="text" name="name3" class="form-control" style="width:200px;"></input>
+        <input type="text" name="name3" class="form-control" style="width:200px;" value="三田"></input>
         </div>
         <div class="top-page-input">
         <label name="name4">予算</label>
-        <input type="text" name="name4" class="form-control" style="width:200px;"></input>
+        <input type="text" name="name4" class="form-control" style="width:200px;" value="四谷"></input>
         </div>
     </div>
     <div class="col-sm-6">
         <div class="top-page-input">
             <label name="start-date">合宿開始日</label>
             <input type="date" name="start-date" class="form-control" style="width:200px;" value="2020-04-10"></input>
-            <label name="end-date">合宿開始日</label>
+            <label name="end-date">合宿終了日</label>
             <input type="date" name="end-date" class="form-control" style="width:200px;" value="2020-04-13"></input>
+            <br>
+            <label name="email">代表者メールアドレス</input>
+            <input type="email" name="email" class="form-control" style="width:300px" placeholder="example@example.com"></input>
         </div>
     </div>
     </div>
