--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 
+    <script src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/common/js/jkanban.js"></script>
+    <link href="https://scheduletask.s3-ap-northeast-1.amazonaws.com/common/css/jkanban.css" rel="stylesheet">
+
     <meta name="viewport" content="width=device-width,initial-scale=0.5">
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
