--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -1,36 +1,41 @@
+<% list_count = 0 %>
 <div style="margin:50px 60px;">
     <%= form_for(@work) do |f| %>
-        <h3><%= f.label :w_name, :value => "タイトル" %></h3>
+        <h3><%= f.label :w_name, :value => "タイトル" %>　<small><span id="start-date"><%= params["start-date"] %></span>から<span id="end-date"><%= params["end-date"] %></span>まで</small></h3>
         <%= f.text_field :w_name, :value => "合宿1", :class => "form-control", :style => "width:200px;" %>
         <br>
         <div class="list-group">
             <%= fields_for 'tasks[]', @tasks do |task| %>
                 <% task.object.collection.each do |task_collection_data| %>
+                    <% list_count += 1 %>
                     <% t_start_date = year_month_date(@today.prev_day(task_collection_data.before_date)); %>
                     <% t_end_date   = year_month_date(@today.prev_day(task_collection_data.before_date).next_day(task_collection_data.date_duration))  %>
                     <% if task_collection_data.parent_task_id == 0 then %>
-                        <div class="list-group-item list-group-item-action active">
+                        <% @js_t_start_date = t_start_date; @js_t_end_date = t_end_date; %>
+                        <div class="list-group-item list-group-item-action active" id="list-item-<%= list_count %>">
                             <p><%= task_collection_data.t_name %></p>
                             <small>
-                            <%= task_collection_data.role %>　　<input type="date" class="form-control" style="width:180px;display:inline;" value="<%= t_start_date %>">
-                            から <input type="date" class="form-control" style="width:180px;display:inline;" value="<%= t_end_date %>"> まで
+                            <%= task_collection_data.role %>　　<input type="date" class="form-control start-date-form" style="width:180px;display:inline;" value="<%= t_start_date %>">
+                            から <input type="date" class="form-control end-date-form" style="width:180px;display:inline;" value="<%= t_end_date %>"> まで
                             </small>
-                        </div>
                     <% else %>
-                        <div class="list-group-item list-group-item-action" style="margin-left:30px;">
-                            <p style="width:200px"><%= task_collection_data.t_name %></p>
-                            <small><%= task_collection_data.role %>　　<%= t_start_date %>
-                            から <%= t_end_date %> まで</small>
-                        </div>
+                        <div class="list-group-item list-group-item-action" id="list-item-<%= list_count %>" style="margin-left:30px;">
+                            <p class="list-event" style="width:200px"><%= task_collection_data.t_name %></p>
+                            <small><span class="list-role"><%= task_collection_data.role %></span>　　<span class="list-start-date"><%= t_start_date %></span>
+                            から <span class="list-end-date"><%= t_end_date %></span> まで</small>
+                            <a href='javascript:FixForm("#list-item-<%= list_count %>", "<%= @js_t_start_date %>", "<%= @js_t_end_date %>");' class="btn btn-info" style="float:right;margin:0 10px;">編集する</a>
+                            <a href='javascript:AppendList("#list-item-<%= list_count %>", "<%= @js_t_start_date %>", "<%= @js_t_end_date %>", <%= task_collection_data.t_number %>, <%= task_collection_data.parent_task_id %>);' class="btn btn-success" style="float:right;margin:0 10px;">追加する</a>
+                            <a href='javascript:DeleteList("#list-item-<%= list_count %>");' class="btn btn-danger" style="float:right;margin:0 10px;">削除する</a>
                     <% end %>
-                    <%= task.hidden_field :t_name, :value => task_collection_data.t_name %>
-                    <%= task.hidden_field :role,   :value => task_collection_data.role %>
-                    <%= task.hidden_field :t_number, :value => task_collection_data.t_number %>
-                    <%= task.hidden_field :before_date,   :value => task_collection_data.before_date %>
-                    <%= task.hidden_field :date_duration,   :value => task_collection_data.date_duration %>
-                    <%= task.hidden_field :parent_task_id, :value => task_collection_data.parent_task_id %>
-                    <%= task.hidden_field :start_date, :value => t_start_date %>
-                    <%= task.hidden_field :end_date, :value => t_end_date %>
+                        <%= task.hidden_field :t_name, :value => task_collection_data.t_name %>
+                        <%= task.hidden_field :role,   :value => task_collection_data.role %>
+                        <%= task.hidden_field :t_number, :value => task_collection_data.t_number %>
+                        <%= task.hidden_field :before_date,   :value => task_collection_data.before_date %>
+                        <%= task.hidden_field :date_duration,   :value => task_collection_data.date_duration %>
+                        <%= task.hidden_field :parent_task_id, :value => task_collection_data.parent_task_id %>
+                        <%= task.hidden_field :start_date, :value => t_start_date %>
+                        <%= task.hidden_field :end_date, :value => t_end_date %>
+                    </div>
                 <% end %>
             <% end %>
         </div>
@@ -40,4 +45,224 @@
         </div>
     <% end %>
     <br>
+
+    <h4>このデザインを使いたい</h4>
+    <br>
+    <div id="myKanban" class="row">
+    </div>
+
+<script type="text/javascript">
+
+    //初期状態のタスク管理ボード用JSONデータ
+    const defaultBoards = [
+    {
+        "id": "sample-board-1",
+        "title": "タスク",
+        "class": "task",
+        "dragTo": ['sample-board-2'], 
+        "item": [
+            { "title": "報告書の作成" },
+            { "title": "14時から打ち合わせ" }
+        ]
+    },
+
+    {
+        "id": "sample-board-2",
+        "title": "進行中",
+        "class": "progress-task",
+        "item": [{ "title": "○○案の企画書作成" }]
+    },
+
+    {
+        "id": "sample-board-3",
+        "title": "完了",
+        "class": "done",
+        "item": [{ "title": "日報の提出" }]
+    },
+    
+    {
+        "id": "sample-board-4",
+        "title": "Test",
+        "class": "done",
+        "item": [{"title": "日報の提出"}]
+    }
+    ];
+
+    //jKanbanのインスタンス作成
+    const kanban = new jKanban({
+      element         : '#myKanban',  //タスク管理ボードを表示するHTML要素
+      gutter          : '15px',       //ボード同士の間隔
+      widthBoard      : '250px',      //ボードのサイズ
+      boards          : defaultBoards,//初期状態のJSONデータ
+      addItemButton   : true,         //タスク追加用のボタンを表示
+      
+      click: (elem) => kanban.removeElement(elem),  //タスクをクリックして削除
+      buttonClick: (elem, id) => addFormElement(id) //タスク追加用の関数を指定
+    });
+  
+    
+    
+    //タスク追加用の関数
+    function addFormElement(id) {
+        const formItem = document.createElement('form');
+
+        formItem.innerHTML = '<div class="kanban-item" style="margin-bottom:20px;">\
+        <input type="text">\
+        </div>';  //タスクを追加するための入力ボックスを作成
+        kanban.addForm(id, formItem);  //入力ボックスをボードに追加
+
+        //タスクを登録する時のイベント処理
+        formItem.addEventListener('submit', (e) => {
+          e.preventDefault();
+
+          kanban.addElement(id, {"title": e.target[0].value}); //入力された文字列をタスクとして登録
+          formItem.parentNode.removeChild(formItem); //入力ボックスを非表示にするために削除
+        }) 
+    }
+
+</script>
+
 </div>
+
+<script type="text/javascript">
+
+    // フォームの変化を把握
+    $("input.start-date-form").change(function(){
+        //
+        var target = $(this).val();
+        alert(target);
+    });
+    $("input.end-date-form").change(function(){
+        //
+    });
+
+    var new_list_item = 1;
+
+    function FixForm(css_selector, start_date, end_date) {
+        var f_event = $(css_selector + " p.list-event").text();
+        var role = $(css_selector + " span.list-role").text();
+        var before_term_date = $(css_selector + " input[name='tasks[][before_date]']").val();
+        var parent_task_id = $(css_selector + " input[name='tasks[][parent_task_id]']").val();
+        var term_day = $(css_selector + " input[name='tasks[][date_duration]']").val();
+        var t_number = $(css_selector + " input[name='tasks[][t_number]']").val();
+        var c_start_date = $(css_selector + " input[name='tasks[][start_date]']").val();
+        var c_end_date = $(css_selector + " input[name='tasks[][end_date]']").val();
+        var t_number   = $(css_selector + " input[name='tasks[][t_number]']").val();
+
+        console.log(f_event + role + before_term_date + parent_task_id + term_day + c_start_date + c_end_date + t_number)
+
+        var date_selector = "<select name='calendar' style='width:100px'>";
+        var date_end_selector = "<select name='end_calendar' style='width:100px'>";
+        f_start_date = new Date(Date.parse(start_date)); f_end_date = new Date(Date.parse(end_date));
+        var date_counter = 1;
+        while (f_start_date <= f_end_date){
+            j_f_start_date = f_start_date.getFullYear() + "年" + (f_start_date.getMonth()+1) + "月" + f_start_date.getDate() + "日"
+            en_f_start_date = f_start_date.getFullYear() + "-" + (f_start_date.getMonth()+1) + "-" + f_start_date.getDate()
+            date_selector += "<option name='"+ en_f_start_date +"'>"+ en_f_start_date + "</option>"
+            if (date_counter != 1){
+                date_end_selector += "<option name='"+ en_f_start_date +"'>"+ en_f_start_date + "</option>"
+            }
+            var newDate = f_start_date.setDate(f_start_date.getDate() + 1);
+            date_counter += 1;
+            f_start_date = new Date(newDate)
+        }
+        date_selector += "</select>"
+        date_end_selector += "</select>"
+        var fixed_selector = '<p style="width:200px">\
+        <input name="event_name" type="text" value="' + f_event + '" placeholder="用事を入力してください">\
+        </p>\
+        <small>\
+        <select name="role" style="width:50px">\
+        <option value="幹事1">幹事1</option>\
+        <option value="幹事2">幹事2</option>\
+        <option value="予算">予算</option>\
+        <option value="飲み会">飲み会</option>\
+        </select>\
+        '+ date_selector +' から '+ date_end_selector +' まで</small>\
+        <a href=\'javascript:FilledForm("' + css_selector +'","' + start_date + '","' + end_date + '","' + t_number + '","' + parent_task_id + '");\'" class="btn btn-warning" style="float:right;margin:0 10px;">決定する</a>\
+        <a href=\'javascript:AppendList("' + css_selector +'","' + start_date + '","' + end_date + '","' + t_number + '","' + parent_task_id + '");\'" class="btn btn-success" style="float:right;margin:0 10px;">追加する</a>\
+        <a href=\'javascript:DeleteList("' + css_selector +'");\'" class="btn btn-danger" style="float:right;margin:0 10px;">削除する</a></div>\
+        <input value="'+ f_event +'" type="hidden" name="tasks[][t_name]" id="tasks__t_name">\
+        <input value="' + role + '" type="hidden" name="tasks[][role]" id="tasks__role">\
+        <input value="' + t_number + '" type="hidden" name="tasks[][t_number]" id="tasks__t_number">\
+        <input value="' + before_term_date +'" type="hidden" name="tasks[][before_date]" id="tasks__before_date">\
+        <input value="' + term_day + '" type="hidden" name="tasks[][date_duration]" id="tasks__date_duration">\
+        <input value="' + parent_task_id + '" type="hidden" name="tasks[][parent_task_id]" id="tasks__parent_task_id">\
+        <input value="' + c_start_date +'" type="hidden" name="tasks[][start_date]" id="tasks__start_date">\
+        <input value="' + c_end_date + '" type="hidden" name="tasks[][end_date]" id="tasks__end_date">';
+        $(css_selector).html(fixed_selector);
+    }
+
+    function FilledForm(css_selector, start_date, end_date, t_number, parent_task_id) {
+        // hoge
+        f_event = $(css_selector + " input[name='event_name']").val()
+        role = $(css_selector + " select[name='role']").val()
+        c_start_date = $(css_selector + " select[name='calendar']").val()
+        c_end_date = $(css_selector + " select[name='end_calendar']").val()
+        term_day = Math.floor((Date.parse(c_end_date) - Date.parse(c_start_date))/86400000)
+        event_end_date = document.getElementById("start-date").innerText
+        before_term_date = Math.floor((Date.parse(event_end_date) - Date.parse(c_start_date))/86400000)
+
+        // t_number と　parent_id は実装必要あり。
+        var filled_selector = '<p style="width:200px">' + f_event + '</p>\
+        <small>' + role + '　　' + c_start_date + '\
+        から ' + c_end_date + ' まで</small>\
+        <a href=\'javascript:FixForm("'+ css_selector +'");\'="" class="btn btn-info" style="float:right;margin:0 10px;">編集する</a>\
+        <a href=\'javascript:AppendList("'+ css_selector + '","' + start_date + '","' + end_date + '","' + t_number + '","' + parent_task_id + '");\'="" class="btn btn-success" style="float:right;margin:0 10px;">追加する</a>\
+        <a href=\'javascript:DeleteList("'+ css_selector + '","' + start_date + '","' + end_date + '");\'="" class="btn btn-danger" style="float:right;margin:0 10px;">削除する</a>\
+        <input value="'+ f_event +'" type="hidden" name="tasks[][t_name]" id="tasks__t_name">\
+        <input value="' + role + '" type="hidden" name="tasks[][role]" id="tasks__role">\
+        <input value="' + t_number + '" type="hidden" name="tasks[][t_number]" id="tasks__t_number">\
+        <input value="'+ before_term_date +'" type="hidden" name="tasks[][before_date]" id="tasks__before_date">\
+        <input value="' + term_day + '" type="hidden" name="tasks[][date_duration]" id="tasks__date_duration">\
+        <input value="' + parent_task_id + '" type="hidden" name="tasks[][parent_task_id]" id="tasks__parent_task_id">\
+        <input value="'+ c_start_date +'" type="hidden" name="tasks[][start_date]" id="tasks__start_date">\
+        <input value="' + c_end_date + '" type="hidden" name="tasks[][end_date]" id="tasks__end_date">';
+        $(css_selector).html(filled_selector);
+    }
+
+    function AppendList(css_selector, start_date, end_date, t_number, parent_task_id) {
+        var date_selector = "<select name='calendar' style='width:100px'>";
+        var date_end_selector = "<select name='end_calendar' style='width:100px'>";
+        f_start_date = new Date(Date.parse(start_date)); f_end_date = new Date(Date.parse(end_date));
+        var date_counter = 1;
+        while (f_start_date <= f_end_date){
+            j_f_start_date = f_start_date.getFullYear() + "年" + (f_start_date.getMonth()+1) + "月" + f_start_date.getDate() + "日"
+            en_f_start_date = f_start_date.getFullYear() + "-" + (f_start_date.getMonth()+1) + "-" + f_start_date.getDate()
+            date_selector += "<option name='"+ en_f_start_date +"'>"+ en_f_start_date + "</option>"
+            if (date_counter != 1){
+                date_end_selector += "<option name='"+ en_f_start_date +"'>"+ en_f_start_date + "</option>"
+            }
+            var newDate = f_start_date.setDate(f_start_date.getDate() + 1);
+            date_counter += 1;
+            f_start_date = new Date(newDate)
+        }
+        date_selector += "</select>"
+        date_end_selector += "</select>"
+        var adding_selector = '<div class="list-group-item list-group-item-action" id="new-list-item-'+new_list_item+'" style="margin-left:30px;">\
+        <p style="width:200px">\
+        <input name="event_name" type="text" placeholder="用事を入力してください">\
+        </p>\
+        <small>\
+        <select name="role" style="width:50px">\
+        <option value="幹事1">幹事1</option>\
+        <option value="幹事2">幹事2</option>\
+        <option value="予算">予算</option>\
+        <option value="飲み会">飲み会</option>\
+        </select>\
+        '+ date_selector +' から '+ date_end_selector +' まで</small>\
+        <a href=\'javascript:FilledForm("#new-list-item-'+new_list_item+'","' + start_date + '","' + end_date + '","' + t_number + '","' + parent_task_id + '");\'" class="btn btn-warning" style="float:right;margin:0 10px;">決定する</a>\
+        <a href=\'javascript:AppendList("#new-list-item-'+new_list_item+'","' + start_date + '","' + end_date + '","' + t_number + '","' + parent_task_id + '");\'" class="btn btn-success" style="float:right;margin:0 10px;">追加する</a>\
+        <a href=\'javascript:DeleteList("#new-list-item-'+new_list_item+'");\'" class="btn btn-danger" style="float:right;margin:0 10px;">削除する</a>\
+        </div>';
+        $(css_selector).after(adding_selector);
+        new_list_item += 1
+    }
+    function DeleteList(css_selector) {
+        if(window.confirm('削除します。大丈夫ですか？')){
+            $(css_selector).remove();
+        }else{
+            window.alert('キャンセルしました');
+        }
+    }
+</script>
