--- a/app/views/works/new.html.erb
+++ b/app/views/works/new.html.erb
@@ -19,7 +19,7 @@
                             から <input type="date" class="form-control end-date-form" style="width:180px;display:inline;" value="<%= t_end_date %>"> まで
                             </small>
                     <% else %>
-                        <div class="list-group-item list-group-item-action" id="list-item-<%= list_count %>" style="margin-left:30px;">
+                        <div class="list-group-item list-group-item-action" id="list-item-<%= list_count %>">
                             <p class="list-event" style="width:200px"><%= task_collection_data.t_name %></p>
                             <small><span class="list-role"><%= task_collection_data.role %></span>　　<span class="list-start-date"><%= t_start_date %></span>
                             から <span class="list-end-date"><%= t_end_date %></span> まで</small>
