--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -27,9 +27,9 @@
         <div class="col-sm-6">
             <div class="top-page-input">
                 <label name="start-date">合宿開始日</label>
-                <input type="date" name="start-date" class="form-control" style="width:200px;" value="2020-04-10"></input>
+                <input type="date" name="start-date" class="form-control" style="width:200px;" value="2020-07-07"></input>
                 <label name="end-date">合宿終了日</label>
-                <input type="date" name="end-date" class="form-control" style="width:200px;" value="2020-04-13"></input>
+                <input type="date" name="end-date" class="form-control" style="width:200px;" value="2020-07-14"></input>
                 <br>
                 <label name="email">代表者メールアドレス</input>
                 <input type="email" name="email" class="form-control" style="width:300px" placeholder="example@example.com"></input>
@@ -52,18 +52,20 @@
                 <h6>１：幹事の名前と日程を入力します</h6>
                 <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage1.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                 <br><br>
-                <p></p>
+                <p>80日前から始めましょう(要検討箇所)<br><strong style="font-size:24px;">飲み会幹事用のページも作る！</strong></p>
+                <br>
             </div>
             <div class="col-sm-6">
                 <h6>２：「やること」が自動で出てきます。確認しましょう。</h6>
                 <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage2.png" width="80%" style="margin:20px auto;border:1px solid #777;">
                 <br><br><br>
                 <p></p>
+                <br>
             </div>
             <div class="col-sm-6">
                 <h6>３：スケジュールが自動生成されます</h6>
                 <img src="https://scheduletask.s3-ap-northeast-1.amazonaws.com/images/usage/Usage3.png" width="80%" style="margin:20px auto;border:1px solid #777;">
-                <br><br>
+                <br>メールアドレスに、ダッシュボードのURLとパスワードが送信されます。<br>
             </div>
             <div class="col-sm-6">
                 <h6>４：みんなで一緒に管理しましょう</h6>
